# infrafish-mailconfig

./: .env  Cargo.toml  USING.md  docker-compose.yml  flake.nix  shell.nix
api_types/: Cargo.toml
api_types/src/: domains.rs  lib.rs  tokens.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  build-styles.sh  index.html
frontend/src/: main.rs  router.rs  state.rs
frontend/src/router/: domains.rs
frontend/style/: main.scss
migrations/2023-07-01-162758_initial/: down.sql  up.sql
migrations/2023-07-01-205353_add-remote-mx/: down.sql  up.sql
migrations/2023-07-08-092435_add-allow-deny-lists/: down.sql  up.sql
migrations/2023-07-08-172341_maildomain-settings/: down.sql  up.sql
migrations/2023-07-16-143454_authtokens/: down.sql  up.sql
migrations/2023-07-16-173351_dkim/: down.sql  up.sql
migrations/2023-08-19-161554_superuser/: down.sql  up.sql
migrations/2023-08-20-092158_fix-mailentry-index/: down.sql  up.sql
migrations/2024-01-18-152305_add-lists/: down.sql  up.sql
migrations/2024-01-18-153103_use-lists/: down.sql  up.sql
src/: api.rs  lib.rs  main.rs  models.rs  schema.rs  state.rs  tokens.rs
src/api/: domain.rs  frontend.rs  tokens.rs  users.rs
src/api/domain/: entries.rs  keys.rs
src/models/: sql_types.rs  util.rs
